# mlgf

./: README2.md  pyproject.toml
examples/: Example MBGF-Net.ipynb  gnn_config.json  test_gnn_orchestrator.joblib  test_gnn_orchestrator_0.pt
examples/test_chk/: ammonia.chk  ethane.chk  methane.chk  water.chk
examples/torch_data_root/raw/: data_0.pt  data_1.pt  data_2.pt
mlgf/data/: __init__.py  _dataset.py  _moldatum.py
mlgf/lib/: dm_helper.py  doshelper.py  gfhelper.py  helpers.py  pes.py  plots.py
mlgf/misc/: plotdos.py  plotdos_waterfci.py
mlgf/model/: active_learning.py  gnn_orchestrator.py  krr_orchestrator.py  prepare_gnn_data.py  preprocessing.py  train_graph_ensemble.py  train_krr.py
mlgf/model/pytorch/: data.py  train.py
mlgf/utils/: datacompat.py
mlgf/workflow/: data_integrity.py  generate.py  generate_pbc.py  generate_splitxyz.py  get_bse.py  get_ml_info.py  ml_features.py  model_errors.py  qp_energy.py  readme.txt
