[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlgf"
version = "0.1.0"
description = "Machine learning many-body Green's function and self-energy"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Christian Venturella", email = "christian.venturella@yale.edu"},
    {name = "Christopher Hillenbrand"},
    {name = "Jiachen Li"},
    {name = "Tianyu Zhu"}
]
keywords = ["quantum-chemistry", "machine-learning", "green-functions", "many-body-physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.16",
    "scipy>=1.2",
    "h5py>=2.9",
    "pandas>=1.0",

    # Quantum chemistry
    "pyscf>=1.7",
    "fcdmft>=0.1.0",  # Local dependency
    "libdmet @ git+https://github.com/gkclab/libdmet_preview.git",

    # Machine learning
    "scikit-learn>=0.22",
    "torch>=2.0,<2.9",
    "torch-geometric>=2.0",

    # Utilities
    "joblib>=0.14",
    "ase>=3.19",
    "Pillow>=8.0",

    # Parallel processing
    "mpi4py>=3.0",
    "threadpoolctl>=2.0",

    # Visualization (optional but commonly used)
    "matplotlib>=3.1",
    "seaborn>=0.10",
    "plotly>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ipython>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/TUstudents/mlgf"
"Bug Tracker" = "https://github.com/TUstudents/mlgf/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mlgf"]

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
extend-exclude = '''
(
  ^/foo.py
  | .*_pb2.py
)
'''

[tool.ruff]
line-length = 120
